master
 - set meaningful creation info including obspyck+obspy version numbers on all
   event objects

0.3.0
 - switch obspy dependency version from 0.10.* to 1.*

0.2.0
 - packaging cleanup

0.1.0
 - initial release with proper package structure and versioning